[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/deimos.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://scenes/ghost.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sons/night-run-125181.mp3" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1299.06, 5.34375 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1302.75, 6.15625 )

[node name="Caverna" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="Deimos" parent="." instance=ExtResource( 2 )]
position = Vector2( 350, 200 )
scale = Vector2( 0.7, 0.7 )

[node name="Interface" parent="." instance=ExtResource( 3 )]

[node name="Roof" type="StaticBody2D" parent="."]
position = Vector2( 450, 500 )

[node name="Collision" type="CollisionShape2D" parent="Roof"]
position = Vector2( 848, -501 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Roof"]
collision_layer = 32768
collision_mask = 8

[node name="Collision2" type="CollisionShape2D" parent="Roof/Area2D"]
position = Vector2( 848, -497 )
shape = SubResource( 1 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Floor"]
position = Vector2( 1296.25, 652 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Floor"]
collision_layer = 65536
collision_mask = 8

[node name="Collision2" type="CollisionShape2D" parent="Floor/Area2D"]
position = Vector2( 1301, 648 )
shape = SubResource( 2 )

[node name="Ghost" parent="." instance=ExtResource( 5 )]
position = Vector2( 1030, 257 )
scale = Vector2( 0.1, 0.1 )

[node name="Ghost2" parent="." instance=ExtResource( 5 )]
position = Vector2( 878, 329 )
scale = Vector2( 0.1, 0.1 )

[node name="music2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 3.0
